near-sdk/compilation_tests/metadata_invalid_rust.stderr
warning: use of deprecated type alias `json_types::public_key::Base58PublicKey`: PublicKey type is now unified with Base58PublicKey. It is recommended to use PublicKey going forward to avoid using similar sounding types for the same thing.
  --> $DIR/mod.rs:12:22
   |
12 | pub use public_key::{Base58PublicKey, PublicKey, CurveType};
   |                      ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: 1 warning emitted

error: Failed to parse code decorated with `metadata!{}` macro. Only valid Rust is supported.
  --> $DIR/metadata_invalid_rust.rs:3:1
   |
3  | / metadata! {
4  | | FOOBAR
5  | |
6  | | #[near_bindgen]
...  |
17 | | }
18 | | }
   | |_^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `near_bindgen`
 --> $DIR/metadata_invalid_rust.rs:1:16
  |
1 | use near_sdk::{near_bindgen, metadata};
  |                ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `BorshDeserialize`, `BorshSerialize`
 --> $DIR/metadata_invalid_rust.rs:2:13
  |
2 | use borsh::{BorshDeserialize, BorshSerialize};
  |             ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^
